# DabMC

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md  DartConfiguration.tcl  README.md  flake.nix
.github/workflows/: build.yml
launcher/: AppQmlEngine.cpp  AppQmlEngine.h  Application.cpp  Application.h  CMakeLists.txt  DataMigrationTask.cpp  FileSystem.cpp  InstanceImportTask.cpp  InstanceImportTask.h  LambdaHelper.h  LaunchController.cpp  MMCZip.h  main.cpp  qtlogging.ini
launcher/icons/: IconList.cpp
launcher/java/: JavaChecker.cpp
launcher/launch/: LaunchTask.cpp
launcher/launch/steps/: PostLaunchCommand.cpp  PreLaunchCommand.cpp
launcher/meta/: BaseEntity.cpp
launcher/minecraft/: MinecraftInstance.cpp  PackProfile.cpp
launcher/minecraft/auth/steps/: MSAStep.cpp
launcher/minecraft/mod/: DataPack.cpp  Mod.cpp  ModFolderModel.cpp  ModFolderModel.h  Resource.cpp  Resource.h  ResourceFolderModel.cpp  ResourceFolderModel.h  ResourcePack.cpp  ResourcePackFolderModel.cpp  ResourcePackFolderModel.h  TexturePackFolderModel.cpp  TexturePackFolderModel.h
launcher/minecraft/mod/tasks/: GetModDependenciesTask.cpp  LocalResourceUpdateTask.cpp  LocalResourceUpdateTask.h
launcher/models/: QtResourcesModel.cpp  QtResourcesModel.h
launcher/modplatform/: EnsureMetadataTask.cpp  EnsureMetadataTask.h
launcher/modplatform/flame/: FileResolvingTask.cpp  FlameAPI.cpp  FlameAPI.h  FlameCheckUpdate.cpp  FlameInstanceCreationTask.cpp
launcher/modplatform/legacy_ftb/: PackInstallTask.cpp
launcher/modplatform/modrinth/: ModrinthAPI.cpp  ModrinthAPI.h  ModrinthCheckUpdate.cpp  ModrinthInstanceCreationTask.cpp  ModrinthPackIndex.cpp
launcher/modplatform/packwiz/: Packwiz.cpp  Packwiz.h
launcher/net/: ChecksumValidator.h  FileSink.cpp
launcher/qml/: CMakeLists.txt  qtquickcontrols2.conf  qtquickcontrols2.qrc
launcher/qml/org/prismlauncher/data/: CMakeLists.txt
launcher/qml/org/prismlauncher/desktop/: BusyIndicator.qml  Button.qml  CMakeLists.txt
launcher/qml/org/prismlauncher/platform/: CMakeLists.txt  MnemonicData.h  Units.cpp  Units.h
launcher/qml/org/prismlauncher/pqcstyle/: Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  ComboBoxItem.cpp  ComboBoxItem.h  DelayButton.cpp  DelayButton.h  Dial.cpp  Dial.h  Edit.cpp  Edit.h  FocusFrame.cpp  FocusFrame.h  FocusRect.cpp  FocusRect.h  Frame.cpp  Frame.h  GroupBox.cpp  GroupBox.h  Header.cpp  Header.h  Item.cpp  Item.h  ItemBranchIndicator.cpp  ItemBranchIndicator.h  ItemRow.cpp  ItemRow.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuBarItem.cpp  MenuBarItem.h  MenuItem.cpp  MenuItem.h  MnemonicData.cpp  (+26 more)
launcher/qml/org/prismlauncher/primitives/: CMakeLists.txt  icon.cpp  icon.h  shadowedrectangle.cpp  shadowedrectangle.h  shadowedtexture.cpp
launcher/qml/org/prismlauncher/primitives/scenegraph/: paintedrectangleitem.cpp  shadowedrectanglematerial.cpp
launcher/qml/org/prismlauncher/ui/: CMakeLists.txt  ObjectTree.qml  QmlWidgetGalleryPane.qml  ThemedItem.qml
launcher/qobject_tree/: QObjectTree.cpp  QObjectTree.h
launcher/ui/: GuiUtil.cpp  MainWindow.cpp
launcher/ui/dialogs/: AboutDialog.cpp  ExportInstanceDialog.cpp  ExportPackDialog.cpp  ExportToModListDialog.cpp  InstallLoaderDialog.cpp  MSALoginDialog.cpp  NewInstanceDialog.cpp  ResourceDownloadDialog.cpp  ResourceUpdateDialog.cpp  ResourceUpdateDialog.h  VersionSelectDialog.cpp
launcher/ui/pages/instance/: ExternalResourcesPage.cpp  ExternalResourcesPage.h  ExternalResourcesPage.ui  InstanceSettingsPage.cpp  ModFolderPage.cpp  ResourcePackPage.cpp  ShaderPackPage.cpp  TexturePackPage.cpp
launcher/ui/pages/modplatform/: ResourceModel.cpp
launcher/ui/pages/modplatform/flame/: FlamePage.cpp
launcher/ui/pages/modplatform/modrinth/: ModrinthPage.cpp
launcher/ui/themes/: CatPack.cpp
launcher/ui/tools/: WidgetGalleryWidgetsPane.cpp  WidgetGalleryWidgetsPane.h  WidgetGalleryWindow.cpp  WidgetGalleryWindow.h
libraries/: README.md
libraries/launcher/: CMakeLists.txt
nix/: unwrapped.nix
program_info/: App.entitlements  org.prismlauncher.PrismLauncher.desktop  org.prismlauncher.PrismLauncher.metainfo.xml  prismlauncher.manifest  prismlauncher.rc  win_install.nsi
